--- a/text_canvas_app/android/app/src/main/AndroidManifest.xml
+++ b/text_canvas_app/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Allow runtime downloads (used by google_fonts when fetching fonts at runtime) -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="text_canvas_app"
         android:name="${applicationName}"
