--- a/text_canvas_app/pubspec.yaml
+++ b/text_canvas_app/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.2.1
+  google_fonts: ^6.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,6 +57,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  # If you later bundle fonts, add an `assets:` and `fonts:` block here.
 
   # To add assets to your application, add an assets section, like this:
   # assets:
